chore: update ESLint configuration to use plugin syntax
docs: enhance README with detailed features, usage, and examples for React DatePicker Lite

chore: add terser for JavaScript minification in build process

fix: update native date adapter to improve date formatting and parsing

refactor: clean up Calendar component for better readability and performance

refactor: improve DateInput component structure and accessibility attributes

refactor: enhance DatePicker component with better state management and styling

test: mock IntersectionObserver and ResizeObserver in test setup for compatibility

types: refine TypeScript types for DatePicker and related components

fix: update locale utility to use a consistent parameter naming convention

build: exclude test files from TypeScript compilation for cleaner output

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,9 +43,7 @@
     "src/**/*.ts",
     "**/*.stories.tsx",
     "**/*.test.tsx",
-    "**/*.test.ts",
-    "vite.config.ts",
-    "vitest.config.ts"
+    "**/*.test.ts"
   ],
   "exclude": [
     "node_modules",
