--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "semantic-release": "^22.0.12",
     "storybook": "^7.6.6",
+    "terser": "^5.43.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-bundle-analyzer": "^0.7.0",
