--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-datepicker-lite",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A lightweight, accessible, and customizable React date picker component with TypeScript support",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
@@ -25,7 +25,6 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "size": "bundlesize",
     "size:analyze": "vite-bundle-analyzer dist/stats.json",
     "prepare": "husky install",
     "prepublishOnly": "npm run build && npm run test:run",
@@ -61,16 +60,24 @@
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    }
+  },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
     "@storybook/addon-a11y": "^7.6.6",
-    "@storybook/addon-essentials": "^7.6.6",
+    "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
-    "@storybook/blocks": "^7.6.6",
-    "@storybook/react": "^7.6.6",
-    "@storybook/react-vite": "^7.6.6",
+    "@storybook/blocks": "^8.6.14",
+    "@storybook/react": "^9.0.18",
+    "@storybook/react-vite": "^9.0.18",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
@@ -80,10 +87,9 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.0.4",
-    "@vitest/ui": "^1.0.4",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "axe-core": "^4.8.3",
-    "bundlesize": "^0.18.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -97,22 +103,16 @@
     "react-dom": "^18.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "semantic-release": "^22.0.12",
-    "storybook": "^7.6.6",
+    "storybook": "^9.0.18",
     "terser": "^5.43.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.8",
+    "vite": "^7.0.6",
     "vite-bundle-analyzer": "^0.7.0",
-    "vitest": "^1.0.4"
+    "vitest": "^3.2.4"
   },
   "optionalDependencies": {
     "moment": "^2.29.4"
   },
-  "bundlesize": [
-    {
-      "path": "./dist/index.esm.js",
-      "maxSize": "45 kB"
-    }
-  ],
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
       "eslint --fix",
