--- a/package.json
+++ b/package.json
@@ -71,17 +71,18 @@
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
-    "@storybook/addon-a11y": "^7.6.6",
+    "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^7.6.6",
-    "@storybook/addon-links": "^7.6.6",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
     "@storybook/blocks": "^8.6.14",
-    "@storybook/react": "^9.0.18",
-    "@storybook/react-vite": "^9.0.18",
+    "@storybook/react": "^8.6.14",
+    "@storybook/react-vite": "^8.6.14",
     "@storybook/testing-library": "^0.2.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -103,10 +104,10 @@
     "react-dom": "^18.2.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "semantic-release": "^22.0.12",
-    "storybook": "^9.0.18",
+    "storybook": "^8.6.14",
     "terser": "^5.43.1",
     "typescript": "^5.3.3",
-    "vite": "^7.0.6",
+    "vite": "^6.3.5",
     "vite-bundle-analyzer": "^0.7.0",
     "vitest": "^3.2.4"
   },
