--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "dev": "vite",
     "build": "vite build && tsc --project tsconfig.build.json",
     "build:watch": "vite build --watch",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
-    "test:run": "vitest run",
+    "test": "jest",
+    "test:ui": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:run": "jest",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "format": "prettier --write src/**/*.{ts,tsx,css}",
@@ -88,8 +88,10 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@vitest/coverage-v8": "^1.6.1",
-    "@vitest/ui": "^1.6.1",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "axe-core": "^4.8.3",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
@@ -97,6 +99,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "identity-obj-proxy": "^3.0.0",
     "jsdom": "^23.0.1",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
@@ -108,8 +111,7 @@
     "terser": "^5.43.1",
     "typescript": "^5.3.3",
     "vite": "^5.4.19",
-    "vite-bundle-analyzer": "^0.7.0",
-    "vitest": "^1.6.1"
+    "vite-bundle-analyzer": "^0.7.0"
   },
   "optionalDependencies": {
     "moment": "^2.29.4"
