--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-datepicker-lite",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A lightweight, accessible, and customizable React date picker component with TypeScript support",
   "main": "dist/index.umd.js",
   "module": "dist/index.esm.js",
@@ -8,6 +8,7 @@
   "files": [
     "dist",
     "README.md",
+    "USAGE_EXAMPLES.md",
     "LICENSE"
   ],
   "scripts": {
@@ -25,7 +26,7 @@
     "type-check": "tsc --noEmit",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "size": "npm run build && bundlesize",
+    "size": "npm run build && bundlewatch",
     "size:analyze": "vite-bundle-analyzer dist/stats.json",
     "prepare": "husky install",
     "prepublishOnly": "npm run build && npm run test:run",
@@ -83,18 +84,15 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@types/jest": "^29.5.12",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "ts-jest": "^29.1.2",
     "axe-core": "^4.8.3",
-    "bundlesize": "^0.18.1",
+    "bundlewatch": "^0.4.1",
     "eslint": "^8.55.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.8.0",
@@ -102,6 +100,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^23.0.1",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.1",
@@ -111,8 +111,9 @@
     "semantic-release": "^22.0.12",
     "storybook": "^8.6.14",
     "terser": "^5.43.1",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.3.3",
-    "vite": "^5.4.19",
+    "vite": "^7.0.6",
     "vite-bundle-analyzer": "^0.7.0"
   },
   "optionalDependencies": {
@@ -144,14 +145,16 @@
     "iOS >= 15.6",
     "Android >= 100"
   ],
-  "bundlesize": [
-    {
-      "path": "./dist/index.umd.js",
-      "maxSize": "50 kB"
-    },
-    {
-      "path": "./dist/index.esm.js",
-      "maxSize": "50 kB"
-    }
-  ]
+  "bundlewatch": {
+    "files": [
+      {
+        "path": "./dist/index.umd.js",
+        "maxSize": "50 kB"
+      },
+      {
+        "path": "./dist/index.esm.js",
+        "maxSize": "50 kB"
+      }
+    ]
+  }
 }
