fix: resolve npm publish version conflict and add semantic-release configuration
- Add semantic-release configuration file (.releaserc.json)
- Install required semantic-release plugins
- Fix workflow token configuration
- This should trigger a new patch version to resolve the 403 error

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ankit-roy-0602/react-datepicker-lite.git"
+    "url": "git+https://github.com/ankit-roy-0602/react-datepicker-lite.git"
   },
   "bugs": {
     "url": "https://github.com/ankit-roy-0602/react-datepicker-lite/issues"
