fix: resolve semantic-release issue and add manual release fallback
- Fix semantic-release GitHub plugin configuration to disable problematic features
- Remove placeholder issue references from pull request template
- Add comprehensive manual release script as fallback option
- Include detailed release process documentation
- Add multiple release script variants for different version bumps

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -24,7 +24,10 @@
             "path": "dist/*.tgz",
             "label": "Distribution"
           }
-        ]
+        ],
+        "successComment": false,
+        "failComment": false,
+        "releasedLabels": false
       }
     ],
     [
